--- a/frontend/admu-incident-reporter/index.html
+++ b/frontend/admu-incident-reporter/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+   
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>admu-incident-reporter</title>
+    <link rel="icon" href="/admu.png" type="image/png"> 
   </head>
   <body>
     <div id="root"></div>
